--- a/dagster.yaml
+++ b/dagster.yaml
@@ -1,17 +1,17 @@
 storage:
   postgres:
     postgres_db:
-      hostname: 127.0.0.1
+      hostname: postgres
       username: dagster
       password: dagster
       db_name: dagster
       port: 5432
 
 #compute_logs:
- # module: dagster.core.storage.local_compute_log_manager
-  #class: LocalComputeLogManager
-  #config:
-  #  base_dir: "/opt/dagster/dagster_home/compute_logs"
+# module: dagster.core.storage.local_compute_log_manager
+#class: LocalComputeLogManager
+#config:
+#  base_dir: "/opt/dagster/dagster_home/compute_logs"
 
 #local_artifact_storage:
 #  module: dagster.core.storage.local_artifact_storage
@@ -20,10 +20,10 @@ storage:
 #    base_dir: "/opt/dagster/dagster_home/storage"
 
 #run_coordinator:
- # module: dagster.core.run_coordinator
-  #class: QueuedRunCoordinator
-  #config:
-  #  max_concurrent_runs: 10
+# module: dagster.core.run_coordinator
+#class: QueuedRunCoordinator
+#config:
+#  max_concurrent_runs: 10
 
 code_servers:
   local_startup_timeout: 360
