--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -10,6 +10,7 @@ python = "<3.13,>=3.9"
 dagster-webserver = "^1.10.21"
 dagster-postgres = "^0.26.21"
 dagster = "^1.10.21"
+dagster-k8s = "^0.26.21"
 
 
 [build-system]
