--- a/dagster.yaml
+++ b/dagster.yaml
@@ -27,3 +27,13 @@ storage:
 
 code_servers:
   local_startup_timeout: 360
+
+run_launcher:
+  module: dagster_k8s.launcher
+  class: K8sRunLauncher
+  config:
+    service_account_name: default
+    job_image: dagster-code-server
+    image_pull_policy: Never
+    instance_config_map: dagster-instance
+    postgres_password_secret: dagster-postgresql-secret
