--- a/k8s/code.yaml
+++ b/k8s/code.yaml
@@ -1,16 +1,42 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: code
   labels:
     app: code
 spec:
-  containers:
-    - name: code
-      image: dagster-code-server
-      imagePullPolicy: Never
-      ports:
-        - containerPort: 4000
+  replicas: 1
+  selector:
+    matchLabels:
+      app: code
+  template:
+    metadata:
+      labels:
+        app: code
+    spec:
+      containers:
+        - name: code
+          image: dagster-code-server
+          imagePullPolicy: Never
+          ports:
+            - containerPort: 4000
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"
+            limits:
+              memory: "1Gi"
+              cpu: "1000m"
+          livenessProbe:
+            tcpSocket:
+              port: 4000
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            tcpSocket:
+              port: 4000
+            initialDelaySeconds: 10
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
