--- a/k8s/daemon.yaml
+++ b/k8s/daemon.yaml
@@ -1,11 +1,27 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: daemon
   labels:
     app: daemon
 spec:
-  containers:
-    - name: daemon
-      image: dagster-daemon
-      imagePullPolicy: Never
+  replicas: 1
+  selector:
+    matchLabels:
+      app: daemon
+  template:
+    metadata:
+      labels:
+        app: daemon
+    spec:
+      containers:
+        - name: daemon
+          image: dagster-daemon
+          imagePullPolicy: Never
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"
+            limits:
+              memory: "1Gi"
+              cpu: "1000m"
