--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -4,6 +4,7 @@ metadata:
   name: dagster-postgresql-secret
 type: Opaque
 stringData:
-  username: dagster
-  password: dagster
-  database: dagster
+  POSTGRESQL_HOSTNAME: postgres
+  POSTGRESQL_USERNAME: dagster
+  POSTGRESQL_PASSWORD: dagster
+  POSTGRESQL_DB: dagster
