--- a/k8s/web.yaml
+++ b/k8s/web.yaml
@@ -39,6 +39,9 @@ spec:
               port: 3000
             initialDelaySeconds: 10
             periodSeconds: 5
+          envFrom:
+            - secretRef:
+                name: dagster-postgresql-secret
 ---
 apiVersion: v1
 kind: Service
