--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -25,3 +25,7 @@ data:
         image_pull_policy: Never
         instance_config_map: dagster-instance
         postgres_password_secret: dagster-postgresql-secret
+        env_config_maps:
+          - dagster-instance
+        env_secrets:
+          - dagster-postgresql-secret
