--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -17,15 +17,5 @@ data:
       local_startup_timeout: 360
 
     run_launcher:
-      module: dagster_k8s.launcher
-      class: K8sRunLauncher
-      config:
-        service_account_name: default
-        job_image: dagster-code-server
-        image_pull_policy: Never
-        instance_config_map: dagster-instance
-        postgres_password_secret: dagster-postgresql-secret
-        env_config_maps:
-          - dagster-instance
-        env_secrets:
-          - dagster-postgresql-secret
+      module: dagster.core.launcher
+      class: DefaultRunLauncher
