--- a/code/pyproject.toml
+++ b/code/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["Chris Hayen <chayen@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "<3.13,>=3.9"
+python = ">=3.10,<3.13"
 dagster = "^1.10.21"
 dagster-postgres = "^0.26.21"
-dagster-k8s = "^0.26.21"
+dagster-dask = "^0.26.21"
+distributed = "^2024.12.0"
 
 
 [build-system]
