--- a/k8s/role.yaml
+++ b/k8s/role.yaml
@@ -4,9 +4,6 @@ metadata:
   namespace: default
   name: default
 rules:
-  - apiGroups: ["batch"]
-    resources: ["jobs"]
-    verbs: ["create", "get", "list", "watch", "update", "patch", "delete"]
   - apiGroups: [""]
     resources: ["pods"]
     verbs: ["get", "list", "watch"]
@@ -18,7 +15,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   namespace: default
-  name: job-creator-binding
+  name: dagster-binding
 subjects:
   - kind: ServiceAccount
     name: default
