dagster / rabbit / celery / postgres example

--- a/dagster.yaml
+++ b/dagster.yaml
@@ -1,55 +1,18 @@
-telemetry:
-  enabled: false
+run_coordinator:
+  module: dagster.core.run_coordinator
+  class: QueuedRunCoordinator
+  config:
+    max_concurrent_runs: 200
 
 storage:
   postgres:
     postgres_db:
+      username: dagster
+      password: dagster
       hostname:
-        env: POSTGRESQL_HOSTNAME
-      username:
-        env: POSTGRESQL_USERNAME
-      password:
-        env: POSTGRESQL_PASSWORD
-      db_name:
-        env: POSTGRESQL_DB
+        env: DAGSTER_PG_HOST
+      db_name: dagster
       port: 5432
 
-#compute_logs:
-# module: dagster.core.storage.local_compute_log_manager
-#class: LocalComputeLogManager
-#config:
-#  base_dir: "/opt/dagster/dagster_home/compute_logs"
-
-#local_artifact_storage:
-#  module: dagster.core.storage.local_artifact_storage
-#  class: LocalArtifactStorage
-#  config:
-#    base_dir: "/opt/dagster/dagster_home/storage"
-
-#run_coordinator:
-# module: dagster.core.run_coordinator
-#class: QueuedRunCoordinator
-#config:
-#  max_concurrent_runs: 10
-
-code_servers:
-  local_startup_timeout: 360
-
-run_launcher:
-  module: dagster_k8s.launcher
-  class: K8sRunLauncher
-  config:
-    service_account_name: default
-    job_image: dagster-code-server
-    image_pull_policy: Never
-    instance_config_map: dagster-instance
-    postgres_password_secret: dagster-postgresql-secret
-    env_config_maps:
-      - dagster-instance
-    env_secrets:
-      - dagster-postgresql-secret
-    env_vars:
-      - "POSTGRESQL_HOSTNAME"
-      - "POSTGRESQL_USERNAME"
-      - "POSTGRESQL_PASSWORD"
-      - "POSTGRESQL_DB"
+telemetry:
+  enabled: false
