--- a/celery_config.yaml
+++ b/celery_config.yaml
@@ -1,4 +1,7 @@
 execution:
   config:
-    broker: "pyamqp://guest:guest@rabbitmq:5672//"
+    broker:
+      env: CELERY_BROKER_URL
+    backend:
+      env: CELERY_RESULT_BACKEND
     include: ["dqueue_dagster"]
